--- a/CSS/productList2.css
+++ b/CSS/productList2.css
@@ -279,7 +279,7 @@ ul li ul.dropdown li {
   > .item-1
   > .product-details
   > .group-btn
-  > #btn {
+  > .cart-button {
   color: whitesmoke;
   font-size: 16px;
   padding: 5px 10px;
@@ -295,7 +295,7 @@ ul li ul.dropdown li {
   > .item-1
   > .product-details
   > .group-btn
-  > #btn:focus,
+  > .cart-button:focus,
 :active {
   outline: none;
 }
@@ -305,7 +305,7 @@ ul li ul.dropdown li {
   > .item-1
   > .product-details
   > .group-btn
-  > #btn
+  > .cart-button
   > i {
   font-size: 14px;
   margin-bottom: 5px;
@@ -987,7 +987,7 @@ ul li ul.dropdown li {
     > .item-1
     > .product-details
     > .group-btn
-    > #btn {
+    > .cart-button {
     width: 100%;
   }
   .main-content
